fix words and white spacings css

--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ and (min-width: 320px)
     .container {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
         padding: 20px 0px 0px 0px;
         max-width: 640px;
     }
@@ -577,6 +577,14 @@ and (min-width: 320px)
         font-size: 13px;
     }
 
+    .logo-paragraph {
+        margin-top: 25px;
+    }
+
+    .phone-details {
+        margin-top: 25px;
+    }
+
     .input-details {
         width: 100%;
         display: flex;
@@ -596,9 +604,12 @@ and (min-width: 320px)
         width: 30px;
     }
 
+
+
     .part2 {
         order: 1;
         max-width: 100%;
+        margin-right: 0px;
     }
 
     input.subscribe {
@@ -607,7 +618,8 @@ and (min-width: 320px)
 }
 
 .attribution {
-    font-size: 13px;
+    padding-top: 30px;
+    font-size: 12px;
 }
 
 }
